<resources>
    <string name="app_name">DanceIVemm</string>
    <string name="class_name">Class Name</string>
    <string name="create_account">Create Account</string>
    <string name="image_desc">Class Image</string>
    <string name="login">Login</string>
    <string name="melissa">Melissa Barrera</string>
    <string name="password">Password</string>
    <string name="splash_desc">DanceIVem Logo</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="venmo">Venmo</string>

    <string-array name="classes">
        <item>Class1</item>
        <item>Class2</item>
    </string-array>
</resources>
