<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/DanceIVemLogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="219dp"
        android:contentDescription="@string/splash_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050"
        app:srcCompat="@drawable/dance_iv_em" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="@id/PasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DanceIVemLogoImageView"
        app:layout_constraintVertical_bias="0.25"
        />
    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="@id/OwnerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UsernameEditText"
        app:layout_constraintVertical_bias="0.0"
        />


    <TextView
        android:id="@+id/OwnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melissa"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DanceIVemLogoImageView"
        app:layout_constraintVertical_bias="0.85" />

</android.support.constraint.ConstraintLayout>