<?xml version="1.0" encoding="utf-8"?>

<!-- Is this necessary -->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    tools:context=".ClassesActivity">-->

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/classesCardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/teacherNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:text="@string/melissa"
                android:color="@android:color/black"
                android:alpha="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                />

            <!-- Click this button to expand the card view -->
            <!-- Covers the entire image -->
            <Button
                android:id="@+id/classesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dance_iv_em"
                android:alpha="0.3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/classesButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <!--android:visibility="gone" TODO -->

                <TextView
                    android:id="@+id/detailsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/image_desc"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="parent"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/detailsTextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/venmo"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->